syntax = "proto3";


package api;

// The els service definitio
service Els {
    // Get a service by routingKey
    rpc GetServiceInstanceByKey (RoutingKey) returns (ServiceInstance) {
    }

    // Add a routingKey to a service
    rpc AddRoutingKey (AddRoutingKeyRequest) returns (ServiceInstance){
    }
}

message RoutingKey {
    string id = 1;
}


message ServiceInstance {
    string serviceUri = 1;
    string tags = 2;
}


message AddRoutingKeyRequest {
    string serviceUri = 1;
    string tags = 2;
    string routingKey = 3;
}
